--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,7 +2,7 @@
   <div class="footer-column">
     <a href="#"><img src="images/home/team-builders-logo.png" alt="Team Builders Limited Logo"></a>
     <div id="footer-address">
-      <p>123 Main Street</p>
+      <p>2512 White Tail Drive</p>
       <p>Cedar Falls, IA 50613</p>
     </div>
     <a href="tel:3194818326">(319) 481-8326</a>
@@ -36,6 +36,9 @@
   <div class="footer-column">
   <h4>More</h4>
   <ul>
+    <li><a href="/interior-remodeling.html">Interior Remodeling</a></li>
+    <li><a href="/exterior-remodeling.html">Exterior Remodeling</a></li>
+    <li><a href="/shed-homes-shouses.html">Shed Homes "Shouses"</a></li>
     <li><a href="/our-work.html">Our Work</a></li>
     <li><a href="/process.html">Our Process</a></li>
     <li><a href="/contactus.html">Contact Us</a></li>
