--- a/css/hero.css
+++ b/css/hero.css
@@ -22,8 +22,8 @@
   background:       
   linear-gradient(
       to bottom right,
-      rgba(255, 255, 255, 0.025), 
-      rgba(154, 184, 88, 0.975)
+      rgba(255, 255, 255, 0.01), 
+      rgba(154, 184, 88, 0.75)
   );
   /* height: 100vh; */
   background-position: center;
@@ -44,7 +44,7 @@
   display: flex;
 }
 
-#main-content h1, #main-content h2 {
+#main-content h1, #main-content h2, #main-content .btn {
   color: white;
   text-align: center;
   text-shadow: 0px 0px 8px #666;
@@ -56,8 +56,14 @@
   right: 0;
 }
 
+#main-content .btn {
+  width: 10%;
+  margin: 0 auto;
+}
+
 #main-content h2 {
   margin: 0;
+  top: 41%;
   font-size: 22px;
 }
 
@@ -83,15 +89,15 @@
   height: 40vh;
   width: 90%;
   margin: 0 auto;
-  margin-top: -17.5%;
+  margin-top: -18%;
   display: flex;
 }
 
 .service-card {
   background-color: #fff;
-  display: flex;
   height: 100%;
-  margin: 0 15px;
+  width: 30%;
+  margin: 0 17.5px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 14px 2px;
   flex-direction: column;
 }
@@ -100,8 +106,8 @@
   background-color: #fff;
   display: flex;
   margin: 0;
-  padding: 10px 0;
-  height: 40px;
+  height: 10px;
+  padding: 20px 0;
   width: 100%;
   align-items: center;
   justify-content: center;
