--- a/css/main-menu.css
+++ b/css/main-menu.css
@@ -98,7 +98,7 @@ nav {
 }
 
 .phone-number {
-  padding: 12.5px 7.5px;
+  padding: 12.5px;
   background: #9AB858;
   color: #fff;
   margin-right: 20px!important;
