--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,9 +5,9 @@
   <div id="feature-menu">
     <a href="/our-work.html">Our Work</a>
     <a href="/contact-us.html" style="border-right: 1px solid #999; padding-right: 15px;">Contact Us</a>
-    <a href="#" class="roof-estimate">Roof Estimate</a>
-    <a href="#" class="client-feedback">Client Feedback</a>
-    <a href="#" class="referral-program">Referral Program</a>
+    <a href="/roofing.html" class="roof-estimate">Roof Estimate</a>
+    <a href="/client-feedback-form.html" class="client-feedback">Client Feedback</a>
+    <a href="/referral.html" class="referral-program">Referral Program</a>
     <a href="https://www.google.com/search?q=teambuilderslimited&rlz=1C1CHBF_enUS691US691&oq=team_builders_limited&aqs=chrome..69i57j0j69i60l4.6122j0j7&sourceid=chrome&ie=UTF-8#lrd=0x87f0001c6a61c2ef:0x4a6e6a79368ff93e,3,,,"  target="_blank" class="leave-review">Leave a Review<span class="fa fa-google" aria-hidden="true"></span></a>
     <a href="tel:3194818326" class="phone-number"> (319) 481-8326 </a>
   </div>
@@ -42,11 +42,11 @@
         <a href="/our-work.html">Our Work</a>
         <a href="/process.html">Our Process</a>
         <a href="/contact-us.html">Contact Us</a>
-        <a href="#">Roof Estimate</a>
-        <a href="#">Client Feedback</a>
-        <a href="#">Referal Program</a>
+        <a href="/roofing.html">Roof Estimate</a>
+        <a href="/client-feedback-form.html">Client Feedback</a>
+        <a href="/referral.html">Referal Program</a>
         <a href="https://www.google.com/search?q=teambuilderslimited&rlz=1C1CHBF_enUS691US691&oq=team_builders_limited&aqs=chrome..69i57j0j69i60l4.6122j0j7&sourceid=chrome&ie=UTF-8#lrd=0x87f0001c6a61c2ef:0x4a6e6a79368ff93e,3,,,"  target="_blank">Leave a Review<span class="fa fa-google" aria-hidden="true"></span></a>
-        <a href="tel:3194818326" class="phone-number"> (319) 481-8326 </a>
+        <a href="tel:3194818326">Call Us</a>
       </div>
     </div>
   </div>
