--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
 <div id="main-menu-container">
   <div id="feature-menu">
     <a href="/our-work.html">Our Work</a>
-    <a href="/contact-us.html" style="border-right: 1px solid #999; padding-right: 15px;">Contact Us</a>
+    <a href="/contact-us.html">Contact Us</a>
     <a href="/roofing.html" class="roof-estimate">Roof Estimate</a>
     <a href="/client-feedback-form.html" class="client-feedback">Client Feedback</a>
     <a href="/referral.html" class="referral-program">Referral Program</a>
