--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -1,62 +1,4 @@
 <!DOCTYPE html>
 <h4 class="h1">Contact Us</h4>
 <p>Contact us directly or simply fill out the form below and we will get back to you within one business day.</p>
-<form id="contact" name="contact" action="https://formspree.io/xoqpvlez" method="POST" enctype=”multipart/form-data”>
-    <div class="form-input">
-      <input type="hidden" id="_gotcha" name="_gotcha" required>
-    </div>
-  <div class="form-column">
-    <div class="form-input">
-      <label for="fname">Name:*</label>
-      <input type="text" id="name" name="name" required>
-    </div>
-  </div>
-  <div class="form-column">
-    <div class="form-input">
-      <label for="address">Address:*</label>
-      <input type="text" id="address" name="address" required>
-    </div>
-  </div>
-  <div class="form-column">
-    <div class="form-input">
-      <label for="city">City:*</label>
-      <input type="text" id="city" name="city" required>
-    </div>
-    <div class="form-input">
-      <label for="address">Zip Code:*</label>
-      <input type="text" id="zip" name="zip" maxlength="5" minlength="5" placeholder="55555" required>
-    </div>
-  </div>
-  <div class="form-column">
-    <div class="form-input">
-      <label for="email">Email:*</label>
-      <input type="text" id="email" name="email" required>
-    </div>
-    <div class="form-input">
-      <label for="phone">Phone:</label>
-      <input type="text" id="phone" name="phone" placeholder="(555) 555-5555" maxlength="14" required>
-    </div>
-  </div>
-  <div class="form-column">
-    <div class="form-input">
-      <label for="message">Message:*</label>
-      <br />
-      <p>Be sure to answer following questions:
-      <ol>
-        <li>What is your project? (Virtual design services, whole home remodel, bathroom renovation, etc.)</li>
-        <li>Where are you located?</li>
-        <li>What are you looking to achieve?</li>
-        <li>What is your desired budget?</li>
-        <li>What is your desired timing?</li>
-      </ol>
-   </p>
-    <textarea id="message" name="message" rows="7" required></textarea>
-    </div>
-  </div>
-  <div class="form-column">
-    <div class="form-input">
-      <input type="submit" class="btn btn-primary" id="submit" name="submit">
-    </div>
-  </div>
-  <p id="submit-message"></p>
-</form>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc2FD99E6U5OZdgB1uQIF_ft4psG16ffpUdq07wdPat_M_QMw/viewform?embedded=true" width="640" height="1380" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
