--- a/css/icons.css
+++ b/css/icons.css
@@ -26,3 +26,7 @@
   -webkit-transform: rotate(90deg);
   transform: rotate(90deg);
 }
+
+.fa-youtube-play, .fa-instagram, .fa-facebook, fa-pinterest {
+    color: #9AB858;
+}
