--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -15,7 +15,7 @@
     width: 100%;
   }
   #main-content-service-selector-wrapper {
-    top: 500px!important;
+    top: 70vh!important;
   }
   .service-card {
     margin: 0 10px;
@@ -24,7 +24,7 @@
 
 @media (min-width: 992px) {
   #main-content-service-selector-wrapper {
-    top: 430px!important;
+    top: 62.5vh;
   }
 }
 
@@ -53,10 +53,10 @@
 
 @media (min-width: 525px) and (max-width: 768px) {
   [id^="main-content-service-cards"] {
-    margin-top: -40%;
+    margin-top: -30%;
   }
   #main-content-service-selector-wrapper {
-    top: 40%;
+    top: 55vh;
   }
   #main-content h1, #main-content h2 {
     top: 25%;
@@ -80,7 +80,7 @@
 }
 
 @media (max-width: 1400px) {
-  a.client-feedback, a.referral-program, a.roof-estimate {
+  a.client-feedback, a.referral-program, a.roof-estimate, #social-menu {
     display: none;
   }
 }
@@ -262,6 +262,12 @@
   .center-focus {
     width: 100%;
   }
+  #main-content-service-selector-wrapper {
+    width: 90%;
+  }
+  #main-content-service-selector a {
+    font-size: 16px;
+  }
   /* Meet Our Owners */
   #meet-our-owners h1 {
     margin-top: 5%;
@@ -289,7 +295,7 @@
     margin: 0 5%;
   }
   #main-content-service-selector-wrapper {
-    top: 42.5%!important;
+    top: 50vh;
   }
   .subpage-content {
     margin: 40% auto 0 auto!important;
