--- a/css/icons.css
+++ b/css/icons.css
@@ -27,6 +27,6 @@
   transform: rotate(90deg);
 }
 
-.fa-youtube-play, .fa-instagram, .fa-facebook, fa-pinterest {
+.fa-youtube-play, .fa-instagram, .fa-facebook, .fa-pinterest {
     color: #9AB858;
 }
