--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,6 +1,9 @@
 @media (min-width: 768px) and (max-width: 992px) {
   #main-content-service-selector {
-    width: 85%;
+    width: 93%;
+  }
+  [id^="main-content-service-cards"] {
+      margin-top: -17.5
   }
   .service-card {
     height: 75%;
@@ -15,7 +18,7 @@
     width: 100%;
   }
   #main-content-service-selector-wrapper {
-    top: 70vh!important;
+    top: 52.5vh!important;
   }
   .service-card {
     margin: 0 10px;
@@ -61,6 +64,9 @@
   #main-content h1, #main-content h2 {
     top: 25%;
   }
+  #main-content, .fade .slick-slider img {
+      height: 88vh;
+  }
 }
 
 @media (max-width: 992px) {
@@ -105,9 +111,6 @@
   .service-card {
     width: 90%;
   }
-  #main-content, .fade .slick-slider img {
-    height: 95vh;
-  }
   #main-content .slick-slider {
     z-index: -1;
     position: relative;
@@ -141,14 +144,14 @@
   #below-main-content-section img {
     margin: 10% 0;
   }
+  .below-main-content, .below-main-content-image {
+      margin-left: 0!important;
+  }
   .process-list-item {
     width: 100%!important;
   }
   .col {
     padding: 2.5% 0;
-  }
-  .my-15 {
-    margin: 0;
   }
   .triangle {
     display: none;
@@ -282,6 +285,9 @@
 }
 
 @media (max-width: 525px) {
+  #main-content, .fade .slick-slider img {
+        height: 88vh;
+  } 
   [id^="main-content-service-cards"] {
     margin-top: -55%;
   }
