--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -47,6 +47,7 @@
       <div id="secondary-links">
         <a href="/our-work.html">Our Work</a>
         <a href="/process.html">Our Process</a>
+        <a href="/about-our-owners.html">About Our Owners</a>
         <a href="/contact-us.html">Contact Us</a>
         <a href="/roofing.html">Roof Estimate</a>
         <a href="/client-feedback-form.html">Client Feedback</a>
