--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -2,7 +2,7 @@
   #main-content-service-selector {
     width: 93%;
   }
-  [id^="main-content-service-cards"] {
+  [id^="main-content-serv3ice-cards"] {
       margin-top: -17.5
   }
   .service-card {
@@ -82,18 +82,6 @@
   }
   #feature-menu {
     display: none;
-  }
-}
-
-@media (max-width: 1400px) {
-  a.client-feedback, a.referral-program, a.roof-estimate, #social-menu {
-    display: none;
-  }
-}
-
-@media (min-width: 1450px) {
-  .our-work-accordion img {
-  width: 30%;
   }
 }
 
@@ -345,5 +333,20 @@
   .form-input {
     width: 100%!important;
     margin: 5% 0;
+  }
+}
+
+@media (max-width: 1400px) {
+  a.client-feedback, a.referral-program, a.roof-estimate {
+    display: none;
+  }
+  #social-menu {
+    display: none;
+}
+}
+
+@media (min-width: 1450px) {
+  .our-work-accordion img {
+  width: 30%;
   }
 }
