TBL requested edits

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -10,7 +10,7 @@
   <div class="footer-column">
   <h4>Interior Remodeling</h4>
   <ul>
-    <li><a href="/bathroom-renovations.html">Bathroom Renovations</a></li>
+    <!-- <li><a href="/bathroom-renovations.html">Bathroom Renovations</a></li> -->
     <li><a href="/basement-renovations.html">Basement Renovations</a></li>
     <li><a href="/kitchen-renovations.html">Kitchen Renovations</a></li>
   </ul>
