--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -25,7 +25,7 @@
         <a href="/">Home</a>
         <a href="#" id="collapse-toggle-interior">Interior Remodeling<span class="fa fa-angle-double-right" aria-hidden="true"></span></a>
           <div id="collapsed-menu-interior">
-            <a href="/bathroom-renovations.html">Bathroom Renovations</a>
+            <!-- <a href="/bathroom-renovations.html">Bathroom Renovations</a> -->
             <a href="/basement-renovations.html">Basement Renovations</a>
             <a href="/kitchen-renovations.html">Kitchen Renovations</a>
           </div>
