replace images with s3 images

--- a/css/service-subpages.css
+++ b/css/service-subpages.css
@@ -58,7 +58,7 @@
 }
 
 .hero-nav.siding {
-  background-image: url(/images/work/siding/siding.png);
+  background-image: url(/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/siding.png);
 }
 
 .hero-nav.shed {
@@ -70,7 +70,7 @@
 }
 
 .hero-nav.roofing {
-  background-image: url(/images/work/roofing/DJI_0665.JPG);
+  background-image: url(/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG);
 }
 
 .hero-nav.commercial {
@@ -78,7 +78,7 @@
 }
 
 .hero-nav.event {
-  background-image: url(/images/work/event-venues/event-venue-1.png);
+  background-image: url(/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-1.png);
 }
 
 .hero-nav.team {
