update logo path

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <div id="footer-container">
   <div class="footer-column">
-    <a href="#"><img src="images/home/team-builders-logo.png" alt="Team Builders Limited Logo"></a>
+    <a href="#"><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/team-builders-logo.png" alt="Team Builders Limited Logo"></a>
     <div id="footer-address">
       <p>2512 White Tail Drive</p>
       <p>Cedar Falls, IA 50613</p>
