--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 <div id="main-nav-logo">
-  <a href="/"><img src="images/home/team-builders-logo.png" alt="Team Builders Limited Logo"></a>
+  <a href="/"><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/team-builders-logo.png" alt="Team Builders Limited Logo"></a>
 </div>
 <div id="main-menu-container">
   <div id="feature-menu">
@@ -20,7 +20,7 @@
   <div id="main-menu" class="sidebar">
     <button class="closebtn"><img src="images/home/cancel.png"></button>
     <div id="collapseMenu">
-      <a href="/"><img src="images/home/team-builders-logo.png" alt="Team Builders Limited Logo"></a>
+      <a href="/"><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/team-builders-logo.png" alt="Team Builders Limited Logo"></a>
       <div id="primary-links">
         <a href="/">Home</a>
         <a href="#" id="collapse-toggle-interior">Interior Remodeling<span class="fa fa-angle-double-right" aria-hidden="true"></span></a>
