--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -18,7 +18,7 @@
     width: 100%;
   }
   #main-content-service-selector-wrapper {
-    top: 52.5vh!important;
+    top: 45vh!important;
   }
   .service-card {
     margin: 0 10px;
@@ -59,13 +59,16 @@
     margin-top: -30%;
   }
   #main-content-service-selector-wrapper {
-    top: 50vh;
+    top: 47.5vh;
   }
   #main-content h1, #main-content h2 {
     top: 25%;
   }
   #main-content, .fade .slick-slider img {
       height: 88vh;
+  }
+  #hero-text {
+     top: 30vh; 
   }
 }
 
@@ -289,8 +292,11 @@
     margin: 0 5%;
   }
   #main-content-service-selector-wrapper {
-    top: 50vh;
+    top: 45vh;
   }
+  #hero-text {
+    top: 27.5vh; 
+ }
   .subpage-content {
     margin: 40% auto 0 auto!important;
   }
