--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;500;600;700&display=swap');
 @import "global.css";
-@import "buttons.css";
 @import "accordion.css";
-@import "icons.css";
-@import "main-menu.css";
-@import "hero.css";
+@import "home.css";
 @import "forms.css";
 @import "banners.css";
-@import "testimonials.css";
-@import "before-after.css";
 @import "our-work.css";
-@import "form-embed.css";
 @import "referral.css";
 @import "media-queries.css";
 @import "footer.css";
 @import "service-subpages.css";
-@import "MakeYourHouseLookLikeNew.css";
-@import "MeetOurOwners.css";
-@import "ChooseTeamBuilders.css";
