--- a/css/service-subpages.css
+++ b/css/service-subpages.css
@@ -26,7 +26,7 @@
 }
 
 .hero-nav.interior-remodeling {
-  background-image: url(https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.png);
+  background-image: url(https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg);
 }
 
 /* .hero-nav.bathroom {
@@ -37,7 +37,7 @@
 } */
 
 .hero-nav.basement {
-  background-image: url(https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.png);
+  background-image: url(https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg);
 }
 
 .hero-nav.kitchen {
@@ -88,7 +88,7 @@
 }
 
 .hero-nav.process {
-  background-image: url(https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.png);
+  background-image: url(https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-renovation.jpeg);
 }
 
 .hero-nav .hero-nav__inner {
