replace images w/ smaller ones

--- a/css/service-subpages.css
+++ b/css/service-subpages.css
@@ -41,7 +41,7 @@
 }
 
 .hero-nav.kitchen {
-  background-image: url(https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpg);
+  background-image: url(https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/kitchen-renovation-island.jpeg);
 }
 
 .hero-nav.fencing {
