delete section from homepage, fix broken images

--- a/css/service-subpages.css
+++ b/css/service-subpages.css
@@ -71,7 +71,7 @@
 }
 
 .hero-nav.roofing {
-  background-image: url(/https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG);
+  background-image: url(https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/DJI_0665.JPG);
 }
 
 .hero-nav.commercial {
