--- a/css/home.css
+++ b/css/home.css
@@ -460,4 +460,9 @@ nav {
       flex-direction: column;
       align-items: center;
     }
+    .mobile-tel {
+        text-align: center;
+        color: #fff;
+        text-decoration: underline;
+    }
   }
