--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -99,9 +99,9 @@
     flex-direction: column;
     height: auto;
   }
-  /* [id^="main-content-service-cards"], #main-content-service-cards-exterior .service-card {
-    width: 100%;
-  } */
+  [id^="main-content-service-cards"] {
+      width: 90%!important;
+  }
   .service-card {
     width: 100%!important;
     margin: 0 auto 7.5% auto;
@@ -124,9 +124,6 @@
   .fade .slick-slider {
     bottom: 20vh;
   }
-  /* .service-card {
-    margin: 5%;
-  } */
   .alert {
     padding: 0!important;
   }
